--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "homepage": "https://github.com/br-data/2020-second-wave#readme",
   "dependencies": {
     "@turf/distance": "^6.0.1",
-    "topojson": "^3.0.2"
+    "babel-minify": "^0.5.1",
+    "topojson": "^3.0.2",
+    "uglifycss": "0.0.29"
   }
 }
